# cadence-md

./: .codespellignore  .gitignore  .pre-commit-config.yaml  DISCLAIMER.md  DISCLAIMER_RU.md  LICENSE  LICENSE_RU.md  README.md  README_RU.md  data.dvc  docker-compose-dev.yml  pyproject.toml
.dvc/: config  config.local.example
.github/workflows/: lint.yml
docs/: setup.md
notebooks/: rag_baseline.ipynb
qdrant/: config.yaml
