[project]
name = "cadence-md"
version = "0.0.1"
description = "CADENCE-MD is an intelligent medical assistant that helps doctors make evidence-based decisions by providing instant access to clinical guidelines and the latest medical research through advanced RAG architecture and PubMed integration."
authors = [
    {name = "Sergey Sysoev",email = "sergey.sys@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "dvc[s3] (>=3.66.1,<4.0.0)"
]

[dependency-groups]
dev = [
    "pre-commit (>=4.4.0,<5.0.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-builtins
    "A",
    # flake8-return
    "RET",
    # flake8-use-pathlib
    "PTH",
    # flynt
    "FLY",
    # mccabe
    "C90",
    # NumPy-specific rules
    "NPY",
    # pep8-naming
    "N",
    # Ruff-specific rules
    "RUF",
    # Pylint - very strict, may be use when have enough time
    "PL",
    # refurb - also may be overwhelming
    "FURB",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 50

[tool.codespell]
skip = "*.lock"
